[tool.poetry]
name = "tinkoff-acquiring-api"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0.0"
setuptools = "^63.2.0"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]
pre-commit-installed = "^0.0.1"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
