[tool.poetry]
name = "tinkoff-acquiring-api"
version = "0.1.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.0.0"
setuptools = "^63.2.0"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]
pre-commit-installed = "^0.0.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
